[package]
name = "hypersync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hypersync"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync"] }
lz4_flex = "0.11"
hotpath = "0.19"
rustc-hash = "2"
parking_lot = "0.12"

[features]
hotpath = ["hotpath/hotpath"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
